tests/errors/error_display/test_hll_immutable_assign_display.si

        fn f() -> i64 {
            let x: i64 = 1;
            x = 2;
            x
        }
    